Switch from Anthropic to OpenAI SDK

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "telegraf": "^4.16.3",
     "discord.js": "^14.14.1",
     "@slack/bolt": "^3.17.1",
-    "@anthropic-ai/sdk": "^0.32.1",
+    "openai": "^4.73.0",
     "express": "^4.18.2"
   }
 }
