--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openclaw-bot",
   "version": "1.0.0",
-  "description": "OpenClaw AI Assistant Bot",
+  "description": "OpenClaw AI Assistant Bot - Supports Telegram, Discord, Slack with OpenAI, Anthropic, Gemini, or OpenRouter",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -12,6 +12,8 @@
     "discord.js": "^14.14.1",
     "@slack/bolt": "^3.17.1",
     "openai": "^4.73.0",
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@google/generative-ai": "^0.21.0",
     "express": "^4.18.2"
   }
 }
